--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scrumtastic",
   "version": "1.0.0",
   "description": "A web app for SCRUM software development",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,7 @@
     "task",
     "board"
   ],
-  "author": "Nathan H. Bean",
+  "author": "Eric Schmar",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/zombiepaladin/scrumtastic/issues"
